--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ button:active {
   color: #004646;
 }
 
-h2 {
+h2, h3 {
   text-transform: uppercase;
   font-family: Verdana, Tahoma, sans-serif;
   color: white;
@@ -83,4 +83,9 @@ ul, ol {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+a {
+color: white;
+font-size: 24px;
 }
